# snn

./: .gitignore  LICENSE  README.md
SNN/: Cargo.toml
SNN/src/: main.rs  network.rs  renderer.rs
SNN/src/network_params/: outputs.npy  weights1.npy  weights2.npy
SNN/src/templates/: template_index.hbs  template_input.hbs  template_single_page.hbs
